<resources>
    <string name="app_name">Mad Level 4 Task 2</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="welcome">Welcome</string>
    <string name="versus">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="draw">Draw</string>
    <string name="you_win">You win!</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="statistics">Your all time statistics</string>
    <string name="win_draw_lose">Win: %d Draw: %d Lose: %d</string>
</resources>